--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,11 @@ body {
 
 .sticker {
 	background-color: #FF0000;
-	border: 4px solid #FFF;
+	border: .31em solid #FFF;
 	border-radius: 2em;
 	color: #FFF;
-	width: 30em;
-	height: 20;
+	width: 21em;
+	height: 12em;
 	padding: 1em 0 2em 0;
 	margin: 3em auto;
 	-webkit-transform: rotate(5deg);	
@@ -100,20 +100,20 @@ body {
 }
 
 #hello {
-	font-size: 30px;
+	font-size: 2.3em;
 	font-weight: bold;
 	text-transform: uppercase;
 }
 
 #mynameis {
-	font-size: 25px;
+	font-size: 1.9em;
 }
 
 .stickerbody {
 	background-color: #FFF;
 	color: #000;
 	font-family: 'Loved by the King', cursive;
-	font-size: 32px;
+	font-size: 1.8em;
 	padding: .2em;
 }
 
@@ -152,6 +152,7 @@ body {
 .stickerbody a:hover, .stickerbody a:active  {
 	text-decoration: underline;
 }
+
 .horiznav {
 	padding: 0;
 	list-style: none;
@@ -161,21 +162,12 @@ body {
 .horiznav li {
 	display: inline;
 }
-.horiznav li:after {
-	content: "|";
-	color: #0000CD;
-	font-size: 1.25em;
-}
-
-.horiznav li:last-child:after {
-	content: "";
-}
 
 .horiznav a, .horiznav a:active, .horiznav a:visited{
 	color: #0000CD;
 	text-decoration: none;
-	font-size: 1.25em;
-	padding: 0 1em;
+	font-size: 1.5em;
+	padding: 0 .5em;
 }
 
 .horiznav a:active, .horiznav a:hover {
@@ -187,9 +179,9 @@ footer {
 }
 
 .shadow {
-	-moz-box-shadow:    3px 3px 5px 6px #ccc;
-	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
-	box-shadow:         3px 3px 5px 6px #ccc;
+	-moz-box-shadow:    .23em .23em .38em .46em #ccc;
+	-webkit-box-shadow: .23em .23em .38em .46em #ccc;
+	box-shadow:         .23em .23em .38em .46em #ccc;
 }
 
 /* ==|== non-semantic helper classes ======================================== */
@@ -207,22 +199,55 @@ footer {
 /* ==|== media queries ====================================================== */
 
 @media only screen and (min-width: 480px) {
-	 #container {
-		width: 480px;
-	 }
+	.sticker {
+		width: 30em;
+		height: 15em;
+	}
+	.stickerbody {
+		background-color: #FFF;
+		color: #000;
+		font-family: 'Loved by the King', cursive;
+		font-size: 2.47em;
+		padding: .2em;
+	}
+	.horiznav {
+		padding: 0;
+		list-style: none;
+		text-align: center;
+	}
 
+	.horiznav li {
+		display: inline;
+	}
+	.horiznav li:after {
+		content: "|";
+		color: #0000CD;
+		font-size: 1.25em;
+	}
+
+	.horiznav li:last-child:after {
+		content: "";
+	}
+
+	.horiznav a, .horiznav a:active, .horiznav a:visited{
+		color: #0000CD;
+		text-decoration: none;
+		font-size: 1.25em;
+		padding: 0 1em;
+	}
+
+	.horiznav a:active, .horiznav a:hover {
+		text-decoration: underline;
+	}
+	
 }
 
 @media only screen and (min-width: 768px) {
-	 #container {
-		width: 768px;
-	 }
+
 }
 
 @media only screen and (min-width: 1024px) {
-	 #container {
-		width: 1024px;
-	 }
+
 }
 
 /* ==|== print styles ======================================================= */
