removing duplicate css

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,12 +22,12 @@ body {
     background-color: $red;
     border: 0.31em solid $white;
     border-radius: 2em;
-    transform: rotate(5deg);
     color: $white;
-    width: 21em;
     height: 15em;
-    padding: 1em 0 2em 0;
     margin: 3em auto;
+    padding: 1em 0 2em 0;
+    transform: rotate(5deg);
+    width: 21em;
 }
 
 .stickertitle {
@@ -65,9 +65,10 @@ body {
         color: $black;
         float: right;
         transform: rotate(10deg);
-    }
-    a:hover, a:active {
-        text-decoration: underline;
+
+        &:hover, &:active {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -87,14 +88,14 @@ body {
     li {
         display: inline;
     }
-    a, a:active, a:visited {
+    a {
         color: $link-color;
         text-decoration: none;
         font-size: 1.5em;
         padding: 0 .5em;
-    }
-    a:active, a:hover {
-        text-decoration: underline;
+        &:active, &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -118,12 +119,6 @@ footer {
         font-size: 2.47em;
     }
     .horiznav {
-        padding: 0;
-        list-style: none;
-        text-align: center;
-        li {
-            display: inline;
-        }
         li:after {
             content: "|";
             color: $link-color;
@@ -132,14 +127,9 @@ footer {
         li:last-child:after {
             content: "";
         }
-        a, a:active, a:visited {
-            color: $link-color;
-            text-decoration: none;
+        a {
             font-size: 1.25em;
             padding: 0 1em;
-        }
-        a:active, a:hover {
-            text-decoration: underline;
         }
     }
 }
