Added some recommended widths for adsense ads
Fixes #1

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import "partials/normalize";
 @import "partials/helpers";
 @import "partials/browser-upgrade.scss";
+@import "partials/adsense";
 
 /* ==========================================================================
    Styles
